# minifw-ai

./: .env.example  .env.minifw_establishment  .env.minifw_financial  .env.minifw_gambling  .env.minifw_hospital  .env.minifw_school  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DAILY_REPORT.md  DEMO.md  DEMO_MASTER_SCRIPT.md  DEVELOPER.md  GEMINI.md  PRD_3_MiniFW-AI_v3.docx  README.md  START_DEMO_CHECKLIST.md  TODO.md  build_deb.sh  build_demo_zip.sh  build_usb.sh  docker-compose.yml  install.sh  minifw-ai-release.asc  minifw.db.backup.20260414_112406  package-lock.json  production_readiness_report.md  pyproject.toml  requirements.txt  roadmap.md  run_web.py  test_dashboard.py  test_imports.py  test_jinja.py  test_services.py  walkthrough.md  walkthroughv2.md
app/: database.py
config/: dnsmasq.conf  minifw-audit.logrotate  policy.json  policy.json.backup.20260119_134116  policy.json.backup.20260119_134131  policy.json.backup.20260119_134136  policy.json.backup.20260119_134155  policy.json.backup.20260119_143823  policy.json.backup.20260119_143902  policy.json.backup.20260119_143936  policy.json.backup.20260119_143947  policy.json.backup.20260119_143952  sector_lock.json
data/: minifw.db
demo/: demo_all_features.py
docker/: Dockerfile  demo-policy-sme.json  demo-policy.json  demo.sh  docker-compose.education.yml  docker-compose.financial.yml  docker-compose.gambling.yml  docker-compose.government.yml  docker-compose.legal.yml  docker-compose.sme.yml  docker-compose.usb-financial.yml  docker-compose.usb-gambling.yml  docker-compose.usb-government.yml  (+5 more)
(+334 files in other folders)
